Disable manual password generation in some cases

This CL disables manual password generation in the context menu in case the
user has disabled the password manager or the site has an SSL problem (in which
case Chrome would not fill the credential).

Bug: 875751
Change-Id: I900590e6674ba0d039033fb5bacfb83f39bcba52
Reviewed-on: https://chromium-review.googlesource.com/1180966
Reviewed-by: Avi Drissman <avi@chromium.org>
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Commit-Queue: Dominic Battré <battre@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584457}
Former-commit-id: 4ca3f37d526ef2134b22598f39be35db488e09a9